--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-__pycache__/application.cpython-38.pyc
-__pycache__/import.cpython-38.pyc
+__pycache__/
+flask_session/
+flask_session/2029240f6d1128be89ddc32729463129
+
